--- a/src/app/assets/css/globals.css
+++ b/src/app/assets/css/globals.css
@@ -1,3 +1,28 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: "Cormorant Garamond";
+  src: url("../fonts/CormorantGaramond-Regular.ttf") format("truetype");
+  font-weight: 300;
+}
+@font-face {
+  font-family: "Noto Sans JP";
+  src: url("../fonts/NotoSansJP-Regular.ttf") format("truetype");
+  font-weight: 400;
+}
+@font-face {
+  font-family: "Noto Sans JP";
+  src: url("../fonts/NotoSansJP-SemiBold.ttf") format("truetype");
+  font-weight: 600;
+}
+
+:root {
+  --font-noto-sans-jp: "Noto Sans JP", sans-serif;
+  --font-garamond: "Cormorant Garamond", serif;
+}
+
+body {
+  font-family: var(--font-noto-sans-jp);
+}
