--- a/src/app/assets/css/globals.css
+++ b/src/app/assets/css/globals.css
@@ -3,8 +3,8 @@
 @tailwind utilities;
 
 @font-face {
-  font-family: "Cormorant Garamond";
-  src: url("../fonts/CormorantGaramond-Regular.ttf") format("truetype");
+  font-family: "Inconsolata";
+  src: url("../fonts/Inconsolata.ttf") format("truetype");
   font-weight: 300;
 }
 @font-face {
@@ -20,7 +20,7 @@
 
 :root {
   --font-noto-sans-jp: "Noto Sans JP", sans-serif;
-  --font-garamond: "Cormorant Garamond", serif;
+  --font-inconsolata: "Inconsolata", serif;
 }
 
 body {
