--- a/src/app/assets/css/globals.css
+++ b/src/app/assets/css/globals.css
@@ -18,6 +18,23 @@
   font-weight: 600;
 }
 
+@layer utilities {
+  ::-webkit-scrollbar {
+    width: 12px;
+    height: 12px;
+  }
+  ::-webkit-scrollbar-thumb {
+    background-color: rgba(255, 255, 255, 0.4);
+    border-radius: 9999px;
+  }
+  ::-webkit-scrollbar-track {
+    background-color: rgba(255, 255, 255, 0);
+  }
+  *[style*="overflow"] {
+    -webkit-overflow-scrolling: touch;
+  }
+}
+
 :root {
   --font-noto-sans-jp: "Noto Sans JP", sans-serif;
   --font-inconsolata: "Inconsolata", serif;
